# Architecturecpp

./: .gitignore  CMakeLists.txt  InterfaceSegregationTest
data/: config.json
include/DependencyInverseArchitecture/: EmailNotifier.hpp  NotificationSystem.hpp  Notifier.hpp  SMSNotifier.hpp
include/InterfaceSegregationArchitecture/: IFile.hpp  IFilter.hpp  ImageManager.hpp
include/LiskovSubtitutionArchitecture/: Circle.hpp  Rectangle.hpp  shapes.hpp
include/ModelViewControllerArchitecture/: SnakeAI.hpp
include/OpenAndClosedArchitecture/: readers.hpp
include/SingleResponsibilityArchitecture/: cartoon_filter.hpp  filters.hpp  image_display.hpp  image_loader.hpp  sketch_filter.hpp
include/StatefulArchitectureAndStateLessArchitecture/: StateLessArchitecture.hpp  StatefulArchitecture.h
src/DependencyInverseArchitecture/: EmailNotifier.cpp  NotificationSystem.cpp  SMSNotifier.cpp  main.cpp
src/Dry/: main.cpp
src/InterfaceSegregationArchitecture/: ImageManager.cpp  main.cpp
src/LiskovSubtitutionArchitecture/: Circle.cpp  Rectangle.cpp  main.cpp
src/ModelViewControllerArchitecture/: SnakeAI.cpp  main.cpp
src/OpenAndClosedArchitecture/: main.cpp  readers.cpp
src/SingleResponsibilityArchitecture/: cartoon_filter.cpp  filters.cpp  image_display.cpp  image_loader.cpp  main.cpp  sketch_filter.cpp
src/StatefulArchitectureAndStateLessArchitecture/: StateLessArchitecture.cpp  StatefulArchitecture.cpp  main.cpp
